[tool.poetry]
name = "hw-5"
version = "0.1.0"
description = ""
authors = ["Alona7777 <abogolepova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
websockets = "^12.0"
names = "^0.3.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
